--- a/style.css
+++ b/style.css
@@ -32,12 +32,13 @@ header {
 }
 
 .field {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 80px;
     width: 80px;
     background-color: white;
     font-size: 8vh;
-
-
 }
 
 .field:hover {
